--- a/html/bootstrap/less/type.less
+++ b/html/bootstrap/less/type.less
@@ -52,6 +52,8 @@ h5, .h5 { font-size: @font-size-h5; }
 h6, .h6 { font-size: @font-size-h6; }
 
 
+
+
 // Body text
 // -------------------------
 
@@ -299,4 +301,20 @@ address {
   margin-bottom: @line-height-computed;
   font-style: normal;
   line-height: @line-height-base;
+}
+
+
+
+h1, .h1{
+  line-height: 1;
+  margin: 32px 0 0;
+}
+h2, .h2{
+  line-height: 34px;
+  margin: 22px 0 0;
+}
+h3, .h3{
+  color: @brand-primary;
+  line-height: 34px;
+  margin: 12px 0 0;
 }
